[package]
name = "evolutionary-algorithms"
version = "0.1.0"
authors = ["Simon <Simon Naumov>"]
edition = "2021"

[dependencies]
# common
tokio = { version = "1.25.0", features = ["full"] }
lazy_static = "1.4.0"
futures = "0.3.25"

# algorithm
bit-vec = "0.6.3"
rand = "0.8.4"
probability = "0.20.3"

# plot representation
plotters = "0.3.2"
plotly = "0.8.3"
image = "0.24.2"
